V4/README.md
# QQ刷名片赞_自动签到_geetest验证码识别
QQ刷名片赞_geetest验证码识别
使用`python`编写的用于个人的刷QQ名片赞and签到需求。  
目前成果如下，开源给大家分享，持续更新中......  

## V1  
1.使用`python tkinter`搭建的个性化页面。  
2.目前模块使用情况如下：  
|  功能  | 可用  | 是否要注册账号  | 是否验证码  |  
|  ----  | ----   | ----  |----  |  
| 自动领赞1  | :heavy_check_mark: | :heavy_check_mark: | :heavy_check_mark:  |  
| 4399三国杀签到  | :heavy_check_mark: | :heavy_check_mark: | :x:  |  
| 自动签到2  | :heavy_check_mark: | :heavy_check_mark: | :x:  |  
| 自动领赞3  | :heavy_check_mark: | :x: | :heavy_check_mark:  |  
  
3.开发工具里有`geetest杀手`，可进行调试。  
4.有exe文件可直接运行使用。  
5.我在尝试上传配置好的Google浏览器...  
  
## V2  
1.修复了进入界面没有path_sys.ini时文件打不开的配置错误。  
2.依旧在努力上传配置好的Google浏览器...  
  
## V3  
1.增加了新的网站。  
2.目前模块使用情况如下：  
|  功能  | 可用  | 是否要注册账号  | 是否验证码  |  
|  ----  | ----   | ----  |----  |  
| 自动领赞1  | :heavy_check_mark: | :heavy_check_mark: | :heavy_check_mark:  |  
| 自动领赞3  | :heavy_check_mark: | :x: | :heavy_check_mark:  |  
| 自动领赞4  | :heavy_check_mark: | :x: | :heavy_check_mark:  |  
| 自动领赞5  | :heavy_check_mark: | :x: | :heavy_check_mark:  |  
| 自动领赞6  | :heavy_check_mark: | :x: | :x:  |  
| 4399三国杀签到  | :heavy_check_mark: | :heavy_check_mark: | :x:  |  
| 自动签到1  | :heavy_check_mark: | :heavy_check_mark: | :x:  |  
| 自动签到2  | :heavy_check_mark: | :heavy_check_mark: | :x:  |  
  
### 重新上传文件  
作者正在学习怎么使用git上传文件...  
然后把V1代码弄丢了...   
:sob::sob::sob::sob::sob::sob::sob::sob::sob::sob::sob:  
  
## V4_test  
1.测试版本，修改了部分代码以优化时间，不确定有没有bug。  
2.上传了配置好的谷歌浏览器。  
3.之后会尝试创建分支以储存新旧版本的代码。  
  
## V4.2
1.修改了部分代码以优化时间，不确定有没有bug。  
2.目前模块使用情况如下：  
|  功能  | 可用  | 是否要注册账号  | 是否验证码  | 所有用户可使用  |  
|  ----  | ----   | ----  |----  |  
| 自动领赞1  | :heavy_check_mark: | :heavy_check_mark: | :heavy_check_mark:  | :x:  |  
| 自动领赞3  | :heavy_check_mark: | :x: | :heavy_check_mark:  | :heavy_check_mark:  |  
| 自动领赞4  | :heavy_check_mark: | :x: | :heavy_check_mark:  | :heavy_check_mark:  |  
| 自动领赞5  | :heavy_check_mark: | :x: | :heavy_check_mark:  | :heavy_check_mark:  |  
| 自动领赞6  | :heavy_check_mark: | :x: | :x: | :x: |  
| 4399三国杀签到  | :heavy_check_mark: | :heavy_check_mark: | :x:  | :x:  |  
| 自动签到1  | :heavy_check_mark: | :heavy_check_mark: | :x:  | :x:  |  
| 自动签到2  | :heavy_check_mark: | :heavy_check_mark: | :x:  | :x:  |  