V8/README.md
# QQ刷名片赞_自动签到_geetest验证码识别
QQ刷名片赞_geetest验证码识别
使用`python`编写的用于个人的刷QQ名片赞and签到需求。  
目前成果如下，开源给大家分享，持续更新中......  

## V1  
1.[V1传送门](https://github.com/408029164/QQ_Sign-in_killgeetest/tree/QQ_Sign-in_killgeetest_V1)  
2.使用`python tkinter`搭建的个性化页面。  
3.目前模块使用情况如下：  
|  功能  | 可用  | 是否要注册账号  | 是否验证码  |  
|  ----  | ----   | ----  |----  |  
| 自动领赞1  | :heavy_check_mark: | :heavy_check_mark: | :heavy_check_mark:  |  
| 4399三国杀签到  | :heavy_check_mark: | :heavy_check_mark: | :x:  |  
| 自动签到2  | :heavy_check_mark: | :heavy_check_mark: | :x:  |  
| 自动领赞3  | :heavy_check_mark: | :x: | :heavy_check_mark:  |  
  
4.开发工具里有`geetest杀手`，可进行调试。  
5.有exe文件可直接运行使用。  
6.我在尝试上传配置好的Google浏览器...  
  
## V2  
1.[V2传送门](https://github.com/408029164/QQ_Sign-in_killgeetest/tree/QQ_Sign-in_killgeetest_V2)  
2.修复了进入界面没有path_sys.ini时文件打不开的配置错误。  
3.依旧在努力上传配置好的Google浏览器...  
  
## V3  
1.[V3传送门](https://github.com/408029164/QQ_Sign-in_killgeetest/tree/QQ_Sign-in_killgeetest_V3)  
2.增加了新的网站。  
3.目前模块使用情况如下：  
|  功能  | 可用  | 是否要注册账号  | 是否验证码  |  
|  ----  | ----   | ----  |----  |  
| 自动领赞1  | :heavy_check_mark: | :heavy_check_mark: | :heavy_check_mark:  |  
| 自动领赞3  | :heavy_check_mark: | :x: | :heavy_check_mark:  |  
| 自动领赞4  | :heavy_check_mark: | :x: | :heavy_check_mark:  |  
| 自动领赞5  | :heavy_check_mark: | :x: | :heavy_check_mark:  |  
| 自动领赞6  | :heavy_check_mark: | :x: | :x:  |  
| 4399三国杀签到  | :heavy_check_mark: | :heavy_check_mark: | :x:  |  
| 自动签到1  | :heavy_check_mark: | :heavy_check_mark: | :x:  |  
| 自动签到2  | :heavy_check_mark: | :heavy_check_mark: | :x:  |  
  
## 重新上传文件  
作者正在学习怎么使用git上传文件...  
然后把V1代码弄丢了...   
:sob::sob::sob::sob::sob::sob::sob::sob::sob::sob::sob:  
  
## V4_test  
1.[V4_test传送门](https://github.com/408029164/QQ_Sign-in_killgeetest/tree/QQ_Sign-in_killgeetest_V4)  
2.测试版本，修改了部分代码以优化时间，不确定有没有bug。  
3.上传了配置好的谷歌浏览器。  
4.之后会尝试创建分支以储存新旧版本的代码。  
  
## Google浏览器配置  
这里是配置好的[Google浏览器](https://github.com/408029164/QQ_Sign-in_killgeetest/tree/Google)~~~~~~  
作者也不知道上传到LFS之后怎么下载了。  
:blush::blush::blush::blush::blush::blush:  
  
## V4.2  
1.[V4.2传送门](https://github.com/408029164/QQ_Sign-in_killgeetest/tree/QQ_Sign-in_killgeetest_V4)  
2.测试版本，修改了部分代码以优化时间，不确定有没有bug。  
3.目前模块使用情况如下：  
|  功能  | 可用  | 是否要注册账号  | 是否验证码  | 所有用户可直接使用  |  
|  ----  | ----   | ----  |----  |----  |  
| 自动领赞1  | :heavy_check_mark: | :heavy_check_mark: | :heavy_check_mark:  | :x:  |  
| 自动领赞3  | :heavy_check_mark: | :x: | :heavy_check_mark:  | :heavy_check_mark:  |  
| 自动领赞4  | :heavy_check_mark: | :x: | :heavy_check_mark:  | :heavy_check_mark:  |  
| 自动领赞5  | :heavy_check_mark: | :x: | :heavy_check_mark:  | :heavy_check_mark:  |  
| 自动领赞6  | :heavy_check_mark: | :x: | :x:  | :heavy_check_mark:  |  
| 4399三国杀签到  | :heavy_check_mark: | :heavy_check_mark: | :x:  | :x:  |  
| 自动签到1  | :heavy_check_mark: | :heavy_check_mark: | :x:  | :x:  |  
| 自动签到2  | :heavy_check_mark: | :heavy_check_mark: | :x:  | :x:  |  
  
## V4.3  
1.[V4.3传送门](https://github.com/408029164/QQ_Sign-in_killgeetest/tree/QQ_Sign-in_killgeetest_V4)  
2.更新了geetest的验证方式。  
3.修复了若干bug。  
  
## geetest验证码识别(Updated on April 1, 2021)  
[geetest验证码识别传送门](https://github.com/408029164/QQ_Sign-in_killgeetest/tree/killgeetest)  
使用`python`编写的用于geetest滑块验证的小程序。  
对比之前的GitHub大佬稍稍修改了geetest验证的方式。  
这里附上我参考GitHub大佬的[链接](https://github.com/CrazyBunQnQ/GeetestCrack)  
### 修改如下：  
1.取消了模拟滑动的操作，使滑块一步到位。  
### 注意事项：  
1.需要下载我配置的[Google浏览器](https://github.com/408029164/QQ_Sign-in_killgeetest/tree/Google)  
2.将本程序exe或所有*.py文件放在和Google文件夹同一目录下。  
![Google_path](https://raw.githubusercontent.com/408029164/QQ_Sign-in_killgeetest/test/pic/Google_path.png)  
3.以下是效果图：  
![killgeetest_success](https://raw.githubusercontent.com/408029164/QQ_Sign-in_killgeetest/test/pic/killgeetest_success.gif)  
  
## V4(Updated on April 10, 2021)  
1.[V4传送门](https://github.com/408029164/QQ_Sign-in_killgeetest/tree/QQ_Sign-in_killgeetest_V4)  
2.提升了程序的运行速度。  
3.修复了若干bug。  
4.发现有些网站更新了验证方式，目前模块使用情况如下：  
|  功能  | 可用  | 是否要注册账号  | 是否验证码  | 所有用户可直接使用  |  
|  ----  | ----   | ----  |----  |----  |  
| 自动领赞1  | :x: | :heavy_check_mark: | :heavy_check_mark:  | :x:  |  
| 自动领赞3  | :heavy_check_mark: | :x: | :heavy_check_mark:  | :heavy_check_mark:  |  
| 自动领赞4  | :heavy_check_mark: | :x: | :heavy_check_mark:  | :heavy_check_mark:  |  
| 自动领赞5  | :heavy_check_mark: | :x: | :heavy_check_mark:  | :heavy_check_mark:  |  
| 自动领赞6  | :heavy_check_mark: | :x: | :x:  | :heavy_check_mark:  |  
| 4399三国杀签到  | :heavy_check_mark: | :heavy_check_mark: | :x:  | :x:  |  
| 自动签到1  | :heavy_check_mark: | :heavy_check_mark: | :x:  | :x:  |  
| 自动签到2  | :heavy_check_mark: | :heavy_check_mark: | :x:  | :x:  |  
  
## V5(Updated on May 2, 2021)  
1.[V5传送门](https://github.com/408029164/QQ_Sign-in_killgeetest/tree/QQ_Sign-in_killgeetest_V5)  
2.提升了程序的运行速度。  
3.修复了若干bug。  
4.增加了保存选择的功能模块。  
5.目前模块使用情况如下：  
|  功能  | 可用  | 是否要注册账号  | 是否验证码  | 所有用户可直接使用  |  
|  ----  | ----   | ----  |----  |----  |  
| 自动领赞1  | :x: | :heavy_check_mark: | :heavy_check_mark:  | :x:  |  
| 自动领赞3  | :heavy_check_mark: | :x: | :heavy_check_mark:  | :heavy_check_mark:  |  
| 自动领赞4  | :heavy_check_mark: | :x: | :heavy_check_mark:  | :heavy_check_mark:  |  
| 自动领赞5  | :x: | :x: | :heavy_check_mark:  | :heavy_check_mark:  |  
| 自动领赞6  | :heavy_check_mark: | :x: | :x:  | :heavy_check_mark:  |  
| 4399三国杀签到  | :heavy_check_mark: | :heavy_check_mark: | :x:  | :x:  |  
| 自动签到1  | :heavy_check_mark: | :heavy_check_mark: | :x:  | :x:  |  
| 自动签到2  | :heavy_check_mark: | :heavy_check_mark: | :x:  | :x:  |  
  
## V6(Updated on May 21, 2021)  
1.[V6传送门](https://github.com/408029164/QQ_Sign-in_killgeetest/tree/QQ_Sign-in_killgeetest_V6)  
2.提升了程序的运行速度。  
3.修复了若干bug。  
4.增加了模块调试的功能。  
5.增加了自动领赞2模块。  
6.好多被封了......目前模块使用情况如下：  
|  功能  | 可用  | 是否要注册账号  | 是否验证码  | 所有用户可直接使用  |  
|  ----  | ----   | ----  |----  |----  |  
| 自动领赞1  | :x: | :heavy_check_mark: | :heavy_check_mark:  | :x:  |  
| 自动领赞2  | :x: | :heavy_check_mark: | :heavy_check_mark:  | :x:  |  
| 自动领赞3  | :x: | :x: | :heavy_check_mark:  | :x:  |  
| 自动领赞4  | :x: | :x: | :heavy_check_mark:  | :x:  |  
| 自动领赞5  | :x: | :x: | :heavy_check_mark:  | :x:  |  
| 自动领赞6  | :heavy_check_mark: | :x: | :x:  | :heavy_check_mark:  |  
| 4399三国杀签到  | :heavy_check_mark: | :heavy_check_mark: | :x:  | :x:  |  
| 自动签到1  | :heavy_check_mark: | :heavy_check_mark: | :x:  | :x:  |  
| 自动签到2  | :heavy_check_mark: | :heavy_check_mark: | :x:  | :x:  |  
  
## V7(Updated on ****)  
1.[V7传送门](https://github.com/408029164/QQ_Sign-in_killgeetest/tree/QQ_Sign-in_killgeetest_V7)  
2.修复了若干bug。  
3.目前模块使用情况如下：  
|  功能  | 可用  | 是否要注册账号  | 是否验证码  | 所有用户可直接使用  |  
|  ----  | ----   | ----  |----  |----  |  
| 自动领赞1  | :heavy_check_mark: | :heavy_check_mark: | :heavy_check_mark:  | :x:  |  
| 自动领赞2  | :x: | :heavy_check_mark: | :heavy_check_mark:  | :x:  |  
| 自动领赞3  | :x: | :x: | :heavy_check_mark:  | :x:  |  
| 自动领赞4  | :x: | :x: | :heavy_check_mark:  | :x:  |  
| 自动领赞5  | :x: | :x: | :heavy_check_mark:  | :x:  |  
| 自动领赞6  | :x: | :x: | :x:  | :x:  |  
| 4399三国杀签到  | :heavy_check_mark: | :heavy_check_mark: | :x:  | :x:  |  
| 自动签到1  | :heavy_check_mark: | :heavy_check_mark: | :x:  | :x:  |  
| 自动签到2  | :x: | :heavy_check_mark: | :x:  | :x:  |  
  
## V8(Updated on ****)  
1.[V8传送门](https://github.com/408029164/QQ_Sign-in_killgeetest/tree/QQ_Sign-in_killgeetest_V8)  
2.修复了若干bug。  
3.目前模块使用情况如下：  
|  功能  | 可用  | 是否要注册账号  | 是否验证码  | 所有用户可直接使用  |  
|  ----  | ----   | ----  |----  |----  |  
| 自动领赞1  | :heavy_check_mark: | :heavy_check_mark: | :heavy_check_mark:  | :x:  |  
| 自动领赞2  | :x: | :heavy_check_mark: | :heavy_check_mark:  | :x:  |  
| 自动领赞3  | :x: | :x: | :heavy_check_mark:  | :x:  |  
| 自动领赞4  | :x: | :x: | :heavy_check_mark:  | :x:  |  
| 自动领赞5  | :x: | :x: | :heavy_check_mark:  | :x:  |  
| 自动领赞6  | :x: | :x: | :x:  | :x:  |  
| 4399三国杀签到  | :heavy_check_mark: | :heavy_check_mark: | :x:  | :x:  |  
| 自动签到1  | :heavy_check_mark: | :heavy_check_mark: | :x:  | :x:  |  
| 自动签到2  | :x: | :heavy_check_mark: | :x:  | :x:  |  